# FaceWatch

./: .gitignore  Makefile  README.md  config.py  config.yml  pyproject.toml
app/: __init__.py  models.py  mongodb.py  postgresql.py  routes.py  utils.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: add_person.html  index.html  search.html
